--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
         run: sudo service smbd restart
   
       - name: Test Samba
-        run: sudo ./main.sh
+        run: sudo netstat -tuln | grep smbd
