--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - run: |
-          sudo wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
-          sudo dpkg -i cloudflared-linux-amd64.deb
-          sudo cloudflared service install ${{ secrets.CF_ID }}
-          sudo systemctl start cloudflared
+      - name: ZeroTier
+        uses: zerotier/github-action@v1.0.1
+        with:
+          network_id: ${{ secrets.ZEROTIER_NETWORK_ID }}
 
       - name: Install Samba
         run: |
