--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,8 @@ jobs:
           create mask = 0777
           directory mask = 0777
           public = yes
+          username = ${{ secrets.SAMBA_USER }}
+          password = ${{ secrets.SAMBA_PASS }}
           " | sudo tee /etc/samba/smb.conf
     
       - name: Restart Samba
