--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,15 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y samba
-          sudo adduser ${{ secrets.SAMBA_USER }}
 
       - name: Configure Samba
         run: |
           sudo mkdir -p /srv/samba/share
           sudo chmod 777 /srv/samba/share
           sudo chmod +x main.sh
+          sudo apt-get install -y smbclient
+          sudo useradd -r -s /bin/false ${{ secrets.SAMBA_USER }}
+          sudo smbpasswd -a ${{ secrets.SAMBA_USER }}
           echo "
           [share]
           path = /srv/samba/share
