--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           sudo chmod +x main.sh
           sudo apt-get install -y smbclient
           sudo useradd -r -s /bin/false ${{ secrets.SAMBA_USER }}
-          sudo smbpasswd -a ${{ secrets.SAMBA_USER }}
+          echo ${{ secrets.SAMBA_PASSWORD }} | sudo smbpasswd -s -a ${{ secrets.SAMBA_USER }}
           echo "
           [share]
           path = /srv/samba/share
