--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
           sudo mkdir -p /srv/samba/share
           sudo chmod 777 /srv/samba/share
           sudo chmod +x main.sh
-          sudo apt-get install -y smbclient
-          sudo useradd -r -s /bin/false ${{ secrets.SAMBA_USER }}
-          echo ${{ secrets.SAMBA_PASSWORD }} | sudo xargs smbpasswd -a ${{ secrets.SAMBA_USER }}
+          # sudo apt-get install -y smbclient
+          # sudo useradd -r -s /bin/false ${{ secrets.SAMBA_USER }}
+          # echo ${{ secrets.SAMBA_PASSWORD }} | sudo xargs smbpasswd -a ${{ secrets.SAMBA_USER }}
           echo "
           [share]
           path = /srv/samba/share
