--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,20 +23,23 @@ jobs:
 
       - name: Configure Samba
         run: |
-          sudo mkdir -p /srv/samba/share
-          sudo chmod 777 /srv/samba/share
-          sudo chmod +x main.sh
           sudo apt-get install -y smbclient
           sudo useradd sambauser
           echo ${{ secrets.SAMBA_PASS }} || passwd --stdin ${{ secrets.SAMBA_USER }}
           echo ${{ secrets.SAMBA_PASS }} || sudo smbpasswd -a sambauser
+          sudo mkdir -p /srv/samba/share
+          sudo chmod 777 /srv/samba/share
+          sudo chown sambauser /srv/samba/share
+          sudo chgrp sambauser /srv/samba/share
+          sudo chmod +x main.sh
           echo "
-          [share]
-          path = /srv/samba/share
-          writeable = yes
-          create mask = 0777
-          directory mask = 0777
-          public = yes
+          [shared_folder]
+            path = /srv/samba/share
+            readonly = no
+            writeable = yes
+            create mask = 0777
+            directory mask = 0777
+            inherit permission = yes
           " | sudo tee /etc/samba/smb.conf
     
       - name: Restart Samba
