--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install Samba
         run: |
+          whoami
           sudo apt-get update
           sudo apt-get install -y samba
 
