--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,20 +24,17 @@ jobs:
       - name: Configure Samba
         run: |
           sudo apt-get install -y smbclient
-          echo ${{ secrets.SAMBA_PASS }} || passwd --stdin runner
-          echo ${{ secrets.SAMBA_PASS }} || sudo smbpasswd -a runner
-          sudo mkdir -p /srv/samba/share
-          sudo chmod 777 /srv/samba/share
-          sudo chown runner /srv/samba/share
-          sudo chgrp runner /srv/samba/share
+          echo ${{ secrets.SAMBA_PASS }} | passwd --stdin runner
+          echo ${{ secrets.SAMBA_PASS }} | sudo smbpasswd -a runner
+          sudo mkdir -p /home/runner/shared_folder
+          sudo chmod 777 /home/runner/shared_folder
+          sudo chown runner /home/runner/shared_folder
+          sudo chgrp runner /home/runner/shared_folder
           sudo chmod +x main.sh
           echo "
-          [share]
-            path = /srv/samba/share
+          [shared_folder]
+            path = /home/runner/shared_folder
             readonly = no
-            writeable = yes
-            create mask = 0777
-            directory mask = 0777
             inherit permission = yes
           " | sudo tee /etc/samba/smb.conf
     
