--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Configure Samba
         run: |
           sudo apt-get install -y smbclient
-          echo ${{ secrets.SAMBA_PASS }} | passwd --stdin runner
+          echo ${{ secrets.SAMBA_PASS }} | passwd runner
           echo ${{ secrets.SAMBA_PASS }} | sudo smbpasswd -a runner
           sudo mkdir -p /home/runner/shared_folder
           sudo chmod 777 /home/runner/shared_folder
