--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,12 @@ jobs:
       - name: Configure Samba
         run: |
           sudo apt-get install -y smbclient
-          echo ${{ secrets.SAMBA_PASS }} | passwd runner
-          echo ${{ secrets.SAMBA_PASS }} | sudo smbpasswd -a runner
+          echo ${{ secrets.SAMBA_PASS }} | passwd sambauser
+          echo ${{ secrets.SAMBA_PASS }} | sudo smbpasswd -a sambauser
           sudo mkdir -p /home/runner/shared_folder
           sudo chmod 777 /home/runner/shared_folder
-          sudo chown runner /home/runner/shared_folder
-          sudo chgrp runner /home/runner/shared_folder
+          sudo chown sambauser /home/runner/shared_folder
+          sudo chgrp sambauser /home/runner/shared_folder
           sudo chmod +x main.sh
           echo "
           [shared_folder]
