--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,8 @@ jobs:
       - name: Configure Samba
         run: |
           sudo apt-get install -y smbclient
-          sudo adduser sambauser
-          echo ${{ secrets.SAMBA_PASS }} | passwd sambauser
-          echo ${{ secrets.SAMBA_PASS }} | sudo smbpasswd -a sambauser
+          sudo adduser --system --group sambauser --shell /bin/false
+          echo ${{ secrets.SAMBA_PASS }} | sudo smbpasswd -s -a sambauser
           sudo mkdir -p /home/runner/shared_folder
           sudo chmod 777 /home/runner/shared_folder
           sudo chown sambauser /home/runner/shared_folder
