--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,32 +16,23 @@ jobs:
         with:
           network_id: ${{ secrets.ZEROTIER_NETWORK_ID }}
 
-      - name: Install Samba
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y samba
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
 
-      - name: Configure Samba
+      - name: Install Samba
+        run: npm install samba
+
+      - name: Start SMB Server
         run: |
-          sudo apt-get install -y smbclient
-          sudo adduser sambauser
-          echo ${{ secrets.SAMBA_PASS }} | sudo smbpasswd -s -a sambauser
-          sudo mkdir -p /home/sambauser/shared_folder
-          sudo chmod 777 /home/sambauser/shared_folder
-          sudo chown sambauser /home/sambauser/shared_folder
-          sudo chgrp sambauser /home/sambauser/shared_folder
-          sudo chmod +x main.sh
-          echo "
-          [shared_folder]
-            path = /home/sambauser/shared_folder
-            readonly = no
-            inherit permission = yes
-          " | sudo tee /etc/samba/smb.conf
-    
-      - name: Restart Samba
-        run: |
-          sudo service smbd restart
-          sudo ufw allow samba
+          node -e "
+            const smb = require('samba');
+            const server = smb.createServer();
+            server.listen(445, function () {
+              console.log('SMB server listening on port 445');
+            });
+          "
   
       - name: Test Samba
         run: sudo ./main.sh
