--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
   
       - name: Configure Samba
         run: |
-          echo ${{ secrets.SAMBA_PASS }} | sudo adduser -m sambauser
+          echo ${{ secrets.SAMBA_PASS }} | sudo adduser --disabled-password sambauser
           sudo mkdir -p /home/sambauser/shared_folder
           sudo chmod 777 /home/sambauser/shared_folder
           sudo chmod +x main.sh
