--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Samba
         run: |
           sudo apt-get update
-          sudo apt-get install -y samba
+          sudo apt-get install -y samba smbclient
   
       - name: Configure Samba
         run: |
