--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Configure Samba
         run: |
           echo ${{ secrets.SAMBA_PASS }} | sudo adduser --disabled-password sambauser
+          echo ${{ secrets.SAMBA_PASS }} || sudo smbpasswd -a sambauser
           sudo mkdir -p /home/sambauser/shared_folder
           sudo chmod 777 /home/sambauser/shared_folder
           sudo chmod +x main.sh
