--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           sudo chmod 777 /home/sambauser/shared_folder
           sudo chmod +x main.sh
           sudo echo "
-          [share]
+          [shared_folder]
             path = /home/sambauser/shared_folder
             writeable = yes
             create mask = 0777
