--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           sudo chgrp sambashare /home/sambauser/share
           sudo chmod +x main.sh
           echo "
-          [shared_folder]
+          [share]
             path = /home/sambauser/share
             readonly = no
             writeable = yes
