--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           sudo apt-get install -y samba
 
       - run: |
-          sysctl -w net.ipv4.conf.eth0.route_localnet=1
+          sudo sysctl -w net.ipv4.conf.eth0.route_localnet=1
           EXTERNAL_IP=0.0.0.0
           sudo iptables -t nat -A OUTPUT -d ${EXTERNAL_IP} -j DNAT --to-destination 127.0.0.1
 
