--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - run: |
-          sudo wget -q https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
-          sudo dpkg -i cloudflared-linux-amd64.deb
-          sudo cloudflared service install ${{ secrets.CF_ID }}
-          sudo systemctl start cloudflared
+      - uses: Boostport/setup-cloudflare-warp@v1
+        with:
+          auth_client_id: ${{ secrets.CLOUDFLARE_AUTH_CLIENT_ID }}
+          auth_client_secret: ${{ secrets.CLOUDFLARE_AUTH_CLIENT_SECRET }}
 
       - name: Install Samba
         run: |
