--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: ZeroTier
-        uses: zerotier/github-action@v1.0.1
-        with:
-          network_id: ${{ secrets.ZEROTIER_NETWORK_ID }}
+        run: curl -s https://install.zerotier.com | sudo bash
+
+      - run: sudo zerotier-one start
+
+      - run: sudo zerotier-cli join 363c67c55a233568 --ip 192.168.193.243
 
       - name: Install Samba
         run: |
