--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
             bind interfaces only = yes
             interfaces = lo
           " | sudo tee /etc/samba/smb.conf
+          echo "0.0.0.0 localhost" | sudo tee -a /etc/hosts
     
       - name: Restart Samba
         run: |
